k8s/install-app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "14"
  creationTimestamp: "2021-10-29T17:56:17Z"
  generation: 20
  labels:
    app: install-app
  name: install-app
  namespace: default
  resourceVersion: "440727366"
  uid: a56d8cdd-ca5e-4e41-945a-42dbe03a2bea
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: install-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: install-app
    spec:
      containers:
      - image: gcr.io/gyra-1558028521907/install-app:v8.5.3
        imagePullPolicy: IfNotPresent
        name: install-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 5
  conditions:
  - lastTransitionTime: "2021-10-29T17:56:17Z"
    lastUpdateTime: "2022-12-20T19:31:12Z"
    message: ReplicaSet "install-app-858b779cf6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-12-23T19:26:43Z"
    lastUpdateTime: "2022-12-23T19:26:43Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 20
  readyReplicas: 5
  replicas: 5
  updatedReplicas: 5
