k8s/install-app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 20
  labels:
    app: install-app
  name: install-app
  namespace: data-science
  resourceVersion: "440727366"
  uid: a56d8cdd-ca5e-4e41-945a-42dbe03a2bea
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: install-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: install-app
    spec:
      containers:
      - image: 941961614774.dkr.ecr.us-west-2.amazonaws.com/install-app:latest
        imagePullPolicy: IfNotPresent
        name: install-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 5
  observedGeneration: 20
  readyReplicas: 5
  replicas: 5
  updatedReplicas: 5
