k8s/install-app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: install-app-service
  namespace: data-science
  labels:
    app: install-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: ClusterIP
  selector:
    app: install-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
